- Formatted StartSessionsMiddleware - Refactored SettingsService,  and some entity providers to use sync - Added ViewsIncrement Middleware - Added renderProfile to DashboardController and renderBlog to BlogsController - Made app layout slightly responsive

--- a/resources/views/app/layout/layout.twig
+++ b/resources/views/app/layout/layout.twig
@@ -70,7 +70,7 @@
 		<div class="container pt-5">
 			<div class="row mt-2">
 				<div class="col-sm-12 col-md-3 mt-2">
-					<div class="card border-secondary-subtle position-fixed">
+					<div class="card border-secondary-subtle position-fixed d-none d-md-block">
 						<div class="card-body">
 							<h5 class="card-title text-primary">Quick Access</h5>
 							<ul class="list-group">
@@ -98,7 +98,7 @@
 					</div>
 				</div>
 				<div class="col-sm-12 col-md-9 column mb-4">
-					<div class="alert alert-primary alert-dismissible fade show" style="display: none;" role="alert">
+					<div class="alert alert-primary alert-dismissible fade show position-fixed w-100" style="display: none;" role="alert">
 						<p class="alert-text"></p>
 						{# <button class="btn-close" data-bs-dismiss="alert"></button> #}
 					</div>
