- Added default user pic on user registration - Formatted User entity - Temporarily displaying logo icon in dp-icon - Added styling rule to main.scss for img icon

--- a/resources/views/app/read.twig
+++ b/resources/views/app/read.twig
@@ -10,6 +10,7 @@
 
 
 {% block page_description %}
+    <img src="{{ asset('build/images/blogginit.png') }}" style="width: 5%; height: 5%" alt="">
     {{blog.user.name}}
     <br>
 	{{ blog.created_at|date('d M, Y') }}
