- Profile now temporarily has default profile image - Added warning alert to components - Made comments and ticks to be only for logged in users. - WIP toggleTick functionality

--- a/resources/views/app/layout/layout.twig
+++ b/resources/views/app/layout/layout.twig
@@ -46,7 +46,7 @@
 							<li>
 								<a class="dropdown-item" href="/collaborations">
 									<i class="bi bi-people-fill me-1 text-primary"></i>Collaboration
-									<span class="badge bg-success">new</span>
+									<span class="badge bg-warning">beta</span>
 								</a>
 							</li>
 							<li>
