--- a/resources/views/extras/layout/layout.twig
+++ b/resources/views/extras/layout/layout.twig
@@ -109,7 +109,7 @@
 					</div>
 				</div>
                 <div class="col-sm-12 col-md-9 column mb-4">
-					<div class="alert alert-primary alert-dismissible fade show" style="display: none;" role="alert">
+					<div class="alert alert-primary alert-dismissible fade show position-fixed w-100" style="display: none;" role="alert">
 						<p class="alert-text"></p>
 						{# <button class="btn-close" data-bs-dismiss="alert"></button> #}
 					</div>
