- Added toggleTick function - Made ticks appear when true - Added Interactions Entity to track views and ticks and added relationships

--- a/resources/views/app/read.twig
+++ b/resources/views/app/read.twig
@@ -33,7 +33,7 @@
         <div class="row">
             <div class="col-4 text-center bg-warning-subtle p-2 border-end border-light">
                 <button class="btn p-0 toggle-tick-btn" data-blog-uuid="{{blog.uuid}}">
-                    <i class="bi {{blog.wasTicked() ? 'bi-check-circle-fill' : 'bi-check-circle'}} text-primary toggle-tick-icon"></i>
+                    <i class="bi {{ticked ? 'bi-check-circle-fill' : 'bi-check-circle'}} text-primary toggle-tick-icon"></i>
                 </button>
             </div>
             <div class="col-4 text-center bg-warning-subtle p-2 border-end border-light">
