--- a/resources/views/app/read.twig
+++ b/resources/views/app/read.twig
@@ -41,11 +41,30 @@
                     <i class="bi bi-chat-right-dots text-primary"></i>
                 </a>
             </div>
-            <div class="col-4 text-center bg-warning-subtle p-2">
+            <div class="dropdown col-4 text-center bg-warning-subtle p-2">
+                <a href="#" class="dropdown-toggle" type="button" id="profileDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                    <i class="bi bi-share-fill text-primary"></i>
+                </a>
+                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
+                    <li>
+                        <a class="dropdown-item" href="#">
+                            <i class="bi bi-facebook me-1 text-primary"></i> Share on FB</a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" href="#">
+                            <i class="bi bi-twitter-x me-1 text-primary"></i> Share on X</a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" href="#">
+                            <i class="bi bi-clipboard me-1 text-primary"></i> Copy link</a>
+                    </li>
+                </ul>
+            </div>
+            {# <div class="col-4 text-center bg-warning-subtle p-2">
                 <a href="#">
                     <i class="bi bi-share-fill text-primary"></i>
                 </a>
-            </div>
+            </div> #}
 		</div>
         {% for comment in blog.comments %}
             <div class="card border-primary">
