--- a/resources/views/extras/layout/layout.twig
+++ b/resources/views/extras/layout/layout.twig
@@ -39,7 +39,7 @@
 						<button class="btn btn-primary dropdown-toggle" type="button" id="profileDropdown" data-bs-toggle="dropdown" aria-expanded="false">
 							{{ user.name }}
 						</button>
-						<ul class="dropdown-menu" aria-labelledby="profileDropdown">
+						<ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
 							<li>
 								<a class="dropdown-item" href="/profile">
 									<i class="bi bi-person-fill me-1 text-primary"></i>My Profile</a>
