--- a/resources/views/app/read.twig
+++ b/resources/views/app/read.twig
@@ -55,7 +55,7 @@
                             <i class="bi bi-twitter-x me-1 text-primary"></i> Share on X</a>
                     </li>
                     <li>
-                        <a class="dropdown-item" href="#">
+                        <a class="dropdown-item copy-btn" href="#">
                             <i class="bi bi-clipboard me-1 text-primary"></i> Copy link</a>
                     </li>
                 </ul>
