--- a/resources/views/extras/layout/layout.twig
+++ b/resources/views/extras/layout/layout.twig
@@ -47,7 +47,7 @@
 							<li>
 								<a class="dropdown-item" href="/collaborations">
 									<i class="bi bi-people-fill me-1 text-primary"></i>Collaboration
-									<span class="badge bg-success">new</span>
+									<span class="badge bg-warning">beta</span>
 								</a>
 							</li>
 							<li>
@@ -128,7 +128,7 @@
 			</div>
 		</div>
                 {% if user == null %}
-                    <footer class="bg-primary text-white p-2 text-center fixed-bottom">
+                    <footer class="bg-primary text-white p-2 text-center mt-4">
                         <div class="container">
                             <p>&copy; {{ 'now' | date('Y') }} Blogginit. All rights reserved.</p>
                         </div>
