--- a/resources/views/landing/layout/layout.twig
+++ b/resources/views/landing/layout/layout.twig
@@ -41,7 +41,7 @@
 		</div>
 
         
-    <footer class="bg-primary text-white p-2 text-center fixed-bottom">
+    <footer class="bg-primary text-white p-2 text-center mt-4">
 
         <div class="container">
 
