Added blog report page

--- a/resources/views/app/reports.twig
+++ b/resources/views/app/reports.twig
@@ -40,7 +40,7 @@
                     <div class="card-body">
                         <h5 class="card-title text-primary">{{blog.title}}</h5>
                         <p class="card-text text-secondary">T: {{blog.ticks}} V: {{blog.views}}</p>
-                        <a href="#" class="btn btn-primary">View Stats</a>
+                        <a href="/reports/{{blog.uuid}}" class="btn btn-primary">View Stats</a>
                     </div>
 				</div>
 			</div>
