--- a/resources/views/app/dashboard.twig
+++ b/resources/views/app/dashboard.twig
@@ -16,7 +16,7 @@
 {% block content %}
 	<div class="container mt-5">
 		<div class="row mt-4">
-			<div class="col-md-4">
+			<div class="col-md-4 mt-2">
 				<div class="card border-primary">
 					<div class="card-body">
 						<h5 class="card-title text-primary">Statistics</h5>
@@ -25,7 +25,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-4">
+			<div class="col-md-4 mt-2">
 				<div class="card border-primary">
 					<div class="card-body">
 						<h5 class="card-title text-primary">Manage Blogs</h5>
@@ -34,7 +34,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-4">
+			<div class="col-md-4 mt-2">
 				<div class="card border-primary">
 					<div class="card-body">
 						<h5 class="card-title text-primary">Settings</h5>
