--- a/resources/views/landing/layout/layout.twig
+++ b/resources/views/landing/layout/layout.twig
@@ -34,14 +34,14 @@
         
     {% endblock %}
 
-		<div class="container">
+		<div class="container mb-4">
         
             {% block content %}{% endblock %}
 
 		</div>
 
         
-    <footer class="bg-primary text-white p-2 text-center mt-4">
+    <footer class="bg-primary text-white p-2 text-center mt-4 fixed-bottom">
 
         <div class="container">
 
