--- a/resources/views/extras/layout/layout.twig
+++ b/resources/views/extras/layout/layout.twig
@@ -65,8 +65,8 @@
 					</div>
 				</div>
                 {% endif %}
-				
-                <div class="nav-dropdown">
+
+                <div class="nav-dropdown d-block d-md-none">
 					<div class="dropdown">
 						<button class="btn btn-primary dropdown-toggle" type="button" id="navDropdown" data-bs-toggle="dropdown" aria-expanded="false">
                             <i class="bi bi-arrow-left-right"></i>
