Minor change on templates

--- a/resources/views/extras/help.twig
+++ b/resources/views/extras/help.twig
@@ -19,6 +19,7 @@
 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error alias assumenda doloremque fugiat dolores aut aspernatur architecto, libero possimus eaque culpa magnam odit porro. Id!</p>
 
 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta provident perferendis aperiam fugit beatae adipisci veniam eius sed, placeat nobis.</p>
+		<p>Hope that was 'helpful' :)</p>
 	</div>
 
 
