--- a/resources/views/landing/landing.twig
+++ b/resources/views/landing/landing.twig
@@ -30,18 +30,47 @@
 			<h2 class="mb-5 p-1 h3">Why Choose Blogginit?</h2>
 			<div class="row">
 				<div class="col-md-4">
+                    <i class="bi bi-gear h1"></i>
 					<h5 class="lead">Easy to Use</h5>
 					<p>Create and manage blogs effortlessly with our intuitive interface.</p>
 				</div>
 				<div class="col-md-4">
+                    <i class="bi bi-moon-stars h1"></i>
+                    <i class="bi bi-arrow-left-right h1"></i>
+                    <i class="bi bi-sun h1"></i>
 					<h5 class="lead">Customizable</h5>
 					<p>Personalize your blog with themes and layouts that suit your style.</p>
 				</div>
 				<div class="col-md-4">
+                    <i class="bi bi-people h1"></i>
 					<h5 class="lead">Community</h5>
 					<p>Connect with other bloggers and share your ideas with the world.</p>
 				</div>
+
 			</div>
 		</div>
 	</section>
+
+    <hr>
+    <section class="px-3 text-center">
+        <div class="container">
+            <h2 class="mb-5 p-1 h3">FAQs</h2>
+            <div class="row">
+                <div class="accordion" id="FAQAccordion">
+                    <div class="accordion-item">
+                        <h4 class="accordion-header" id="headingOne">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                            Guess What?
+                        </button>
+                        </h4>
+                        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#FAQAccordion" style="">
+                            <div class="accordion-body">
+                                <p class="text-start">No Questions asked, just use it!</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 {% endblock %}
