- Updated .env.example - Little tweak in landing page - Started RateLimitMiddleware for Redis caching

--- a/resources/views/extras/services.twig
+++ b/resources/views/extras/services.twig
@@ -16,9 +16,39 @@
 
 {% block content %}
 	<div class="container mt-5 lead">
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error alias assumenda doloremque fugiat dolores aut aspernatur architecto, libero possimus eaque culpa magnam odit porro. Id!</p>
+		<p>
+            At Blogginit, we are committed to protecting your privacy. This Privacy Policy outlines how we collect, use, and safeguard your personal information when you visit our website <a href="blogginit.test">Blogginit</a>.
+        </p>
 
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta provident perferendis aperiam fugit beatae adipisci veniam eius sed, placeat nobis.</p>
+		<p>
+            We may collect the following types of information:
+        </p>
+
+        <ul>
+            <li>Personal Information:
+            Such as your name and email address when you subscribe to our newsletter or leave comments.
+            </li>
+            <li>Log Data:
+            Information about your visit to our website, including your IP address, browser type, referring/exit pages, and operating system.
+            </li>
+            <li>Cookies and Tracking Technologies:
+            We use cookies and similar tracking technologies to enhance your browsing experience, analyze website traffic, and personalize content.
+            </li>
+        </ul>
+
+        <p>We collect information when you:</p>
+
+        <ul>
+        <li>
+            Subscribe to our newsletter
+        </li>
+        <li>
+            Leave comments in our articles
+        </li>
+        <li>
+            Browse our website (automatically collected data)
+        </li>
+        </ul>
 	</div>
 
 
