--- a/resources/views/landing/landing.twig
+++ b/resources/views/landing/landing.twig
@@ -30,20 +30,20 @@
 			<h2 class="mb-5 p-1 h3">Why Choose Blogginit?</h2>
 			<div class="row">
 				<div class="col-md-4">
-                    <i class="bi bi-gear h1"></i>
-					<h5 class="lead">Easy to Use</h5>
+                    <i class="bi bi-gear h1 text-primary"></i>
+					<h5 class="lead text-primary">Easy to Use</h5>
 					<p>Create and manage blogs effortlessly with our intuitive interface.</p>
 				</div>
 				<div class="col-md-4">
-                    <i class="bi bi-moon-stars h1"></i>
-                    <i class="bi bi-arrow-left-right h1"></i>
-                    <i class="bi bi-sun h1"></i>
-					<h5 class="lead">Customizable</h5>
+                    <i class="bi bi-moon-stars h1 text-primary"></i>
+                    <i class="bi bi-arrow-left-right h1 text-primary"></i>
+                    <i class="bi bi-sun h1 text-primary"></i>
+					<h5 class="lead text-primary">Customizable</h5>
 					<p>Personalize your blog with themes and layouts that suit your style.</p>
 				</div>
 				<div class="col-md-4">
-                    <i class="bi bi-people h1"></i>
-					<h5 class="lead">Community</h5>
+                    <i class="bi bi-people h1 text-primary"></i>
+					<h5 class="lead text-primary">Community</h5>
 					<p>Connect with other bloggers and share your ideas with the world.</p>
 				</div>
 
@@ -65,7 +65,7 @@
                         </h4>
                         <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#FAQAccordion" style="">
                             <div class="accordion-body">
-                                <p class="text-start">No Questions asked, just use it!</p>
+                                <p class="text-start">No questions asked, just use it!</p>
                             </div>
                         </div>
                     </div>
